# pyspark-udtf

./: .gitignore  DESIGN_META_CAPI.md  README.md  pyproject.toml
.cursor/skills/create-udtf/: SKILL.md
.cursor/skills/release-package/: SKILL.md
examples/: meta_capi_example.py
src/pyspark_udtf/: __init__.py
src/pyspark_udtf/udtfs/: __init__.py  fuzzy_match.py  image_caption.py  mapping_engine.py  meta_capi.py
src/pyspark_udtf/utils/: version_check.py
tests/: test_arrow_udtf_logic.py  test_image_caption.py  test_integration.py  test_meta_capi.py  test_meta_capi_integration.py  test_version_check.py
