[project]
name = "pyspark-udtf"
version = "0.1.0"
description = "A collection of PySpark User-Defined Table Functions (UDTFs)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=4.0.0",
    "requests",
    "pandas",
    "pyarrow",
    "PyYAML"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyspark_udtf"]
