[project]
name = "pyspark-udtf"
version = "0.1.0"
description = "A collection of PySpark User-Defined Table Functions (UDTFs)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }  # Recommended for open source, or change to MIT
authors = [
    { name = "Allison Wang", email = "allisowang@apache.org" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyspark>=4.0.0",
    "requests",
    "pandas",
    "pyarrow",
    "PyYAML"
]

[project.urls]
Repository = "https://github.com/allisonwang-db/pyspark-udtf"
Issues = "https://github.com/allisonwang-db/pyspark-udtf/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyspark_udtf"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
